tests/rustdoc-ui/math/basic.rs
#![doc(syntax="+tex_math_dollars")]
#![deny(rustdoc::invalid_math)]

//! $\sqrt{2}$
//!
//! $\frobnicate{2}$
//~^ ERROR frobnicate
